# Argus

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent/: agent_graph.py  graph.py  nodes.py
agent/tools/: geolocation.py  merchant.py  profile.py  transaction.py  velocity.py
api/: main.py  schemas.py
data/: generate.py  seed.sql
frontend/: index.html
tests/evals/: cases.json  run_evals.py
tests/unit/: test_tools.py
